@@ -1,0 +1,367 @@
+    Z0       0.0             M2
+    SA       0.0001140741    SSA
+    SSA      0.0002281591    Z0
+    MSM      0.0013097808    MM
+    MM       0.0015121518    MSF
+    MSF      0.0028219327    Z0
+    MF       0.0030500918    MSF
+    ALP1     0.0343965699    2Q1
+    2Q1      0.0357063507    Q1
+    SIG1     0.0359087218    2Q1
+    Q1       0.0372185026    O1
+    RHO1     0.0374208736    Q1
+    O1       0.0387306544    K1
+    TAU1     0.0389588136    O1
+    BET1     0.0400404353    NO1
+    NO1      0.0402685944    K1
+    CHI1     0.0404709654    NO1
+    PI1      0.0414385130    P1
+    P1       0.0415525871    K1
+    S1       0.0416666721    K1
+    K1       0.0417807462    Z0
+    PSI1     0.0418948203    K1
+    PHI1     0.0420089053    K1
+    THE1     0.0430905270    J1
+    J1       0.0432928981    K1
+    2PO1     0.0443745198
+    SO1      0.0446026789    OO1
+    OO1      0.0448308380    J1
+    UPS1     0.0463429898    OO1
+    ST36     0.0733553835
+    2NS2     0.0746651643
+    ST37     0.0748675353
+    ST1      0.0748933234
+    OQ2      0.0759749451    EPS2
+    EPS2     0.0761773161    2N2
+    ST2      0.0764054753
+    ST3      0.0772331498
+    O2       0.0774613089
+    2N2      0.0774870970    MU2
+    MU2      0.0776894680    N2
+    SNK2     0.0787710897
+    N2       0.0789992488    M2
+    NU2      0.0792016198    N2
+    ST4      0.0794555670
+    OP2      0.0802832416
+    GAM2     0.0803090296    H1
+    H1       0.0803973266    M2
+    M2       0.0805114007    Z0
+    H2       0.0806254748    M2
+    MKS2     0.0807395598    M2
+    ST5      0.0809677189
+    ST6      0.0815930224
+    LDA2     0.0818211815    L2
+    L2       0.0820235525    S2
+    2SK2     0.0831051742
+    T2       0.0832192592    S2
+    S2       0.0833333333    M2
+    R2       0.0834474074    S2
+    K2       0.0835614924    S2
+    MSN2     0.0848454852    ETA2
+    ETA2     0.0850736443    K2
+    ST7      0.0853018034
+    2SM2     0.0861552660
+    ST38     0.0863576370
+    SKM2     0.0863834251
+    2SN2     0.0876674179
+    NO3      0.1177299033
+    MO3      0.1192420551    M3
+    M3       0.1207671010    M2
+    NK3      0.1207799950
+    SO3      0.1220639878    MK3
+    MK3      0.1222921469    M3
+    SP3      0.1248859204
+    SK3      0.1251140796    MK3
+    ST8      0.1566887168
+    N4       0.1579984976
+    3MS4     0.1582008687
+    ST39     0.1592824904
+    MN4      0.1595106495    M4
+    ST9      0.1597388086
+    ST40     0.1607946422
+    M4       0.1610228013    M3
+    ST10     0.1612509604
+    SN4      0.1623325821    M4
+    KN4      0.1625607413
+    MS4      0.1638447340    M4
+    MK4      0.1640728931    MS4
+    SL4      0.1653568858
+    S4       0.1666666667    MS4
+    SK4      0.1668948258    S4
+    MNO5     0.1982413039
+    2MO5     0.1997534558
+    3MP5     0.1999816149
+    MNK5     0.2012913957
+    2MP5     0.2025753884
+    2MK5     0.2028035475    M4
+    MSK5     0.2056254802
+    3KM5     0.2058536393
+    2SK5     0.2084474129    2MK5
+    ST11     0.2372259056
+    2NM6     0.2385098983
+    ST12     0.2387380574
+    2MN6     0.2400220501    M6
+    ST13     0.2402502093
+    ST41     0.2413060429
+    M6       0.2415342020    2MK5
+    MSN6     0.2428439828
+    MKN6     0.2430721419
+    ST42     0.2441279756
+    2MS6     0.2443561347    M6
+    2MK6     0.2445842938    2MS6
+    NSK6     0.2458940746
+    2SM6     0.2471780673    2MS6
+    MSK6     0.2474062264    2SM6
+    S6       0.2500000000
+    ST14     0.2787527046
+    ST15     0.2802906445
+    M7       0.2817899023
+    ST16     0.2830867891
+    3MK7     0.2833149482    M6
+    ST17     0.2861368809
+    ST18     0.3190212990
+    3MN8     0.3205334508
+    ST19     0.3207616099
+    M8       0.3220456027    3MK7
+    ST20     0.3233553835
+    ST21     0.3235835426
+    3MS8     0.3248675353
+    3MK8     0.3250956944
+    ST22     0.3264054753
+    ST23     0.3276894680
+    ST24     0.3279176271
+    ST25     0.3608020452
+    ST26     0.3623141970
+    4MK9     0.3638263489
+    ST27     0.3666482815
+    ST28     0.4010448515
+    M10      0.4025570033
+    ST29     0.4038667841
+    ST30     0.4053789360
+    ST31     0.4069168759
+    ST32     0.4082008687
+    ST33     0.4471596822
+    M12      0.4830684040
+    ST34     0.4858903367
+    ST35     0.4874282766
+ 
+  .7428797055  .7771900329  .5187051308  .3631582592  .7847990160  000GMT 1/1/76
+13.3594019864  .9993368945  .1129517942  .0536893056  .0000477414  INCR./365DAYS
+      Z0      0  0  0  0  0  0 0.0    0
+      SA      0  0  1  0  0 -1 0.0    0
+      SSA     0  0  2  0  0  0 0.0    0
+      MSM     0  1 -2  1  0  0  .00   0
+      MM      0  1  0 -1  0  0 0.0    0
+      MSF     0  2 -2  0  0  0 0.0    0
+      MF      0  2  0  0  0  0 0.0    0
+      ALP1    1 -4  2  1  0  0 -.25   2
+      ALP1  -1  0  0 .75 0.0360R1   0 -1  0 .00 0.1906
+      2Q1     1 -3  0  2  0  0-0.25   5
+      2Q1   -2 -2  0 .50 0.0063    -1 -1  0 .75 0.0241R1  -1  0  0 .75 0.0607R1
+      2Q1    0 -2  0 .50 0.0063     0 -1  0 .0  0.1885
+      SIG1    1 -3  2  0  0  0-0.25   4
+      SIG1  -1  0  0 .75 0.0095R1   0 -2  0 .50 0.0061     0 -1  0 .0  0.1884
+      SIG1   2  0  0 .50 0.0087
+      Q1      1 -2  0  1  0  0-0.25  10
+      Q1    -2 -3  0 .50 0.0007    -2 -2  0 .50 0.0039    -1 -2  0 .75 0.0010R1
+      Q1    -1 -1  0 .75 0.0115R1  -1  0  0 .75 0.0292R1   0 -2  0 .50 0.0057
+      Q1    -1  0  1 .0  0.0008     0 -1  0 .0  0.1884     1  0  0 .75 0.0018R1
+      Q1     2  0  0 .50 0.0028
+      RHO1    1 -2  2 -1  0  0-0.25   5
+      RHO1   0 -2  0 .50 0.0058     0 -1  0 .0  0.1882     1  0  0 .75 0.0131R1
+      RHO1   2  0  0 .50 0.0576     2  1  0 .0  0.0175
+      O1      1 -1  0  0  0  0-0.25   8
+      O1    -1  0  0 .25 0.0003R1   0 -2  0 .50 0.0058     0 -1  0 .0  0.1885
+      O1     1 -1  0 .25 0.0004R1   1  0  0 .75 0.0029R1   1  1  0 .25 0.0004R1
+      O1     2  0  0 .50 0.0064     2  1  0 .50 0.0010
+      TAU1    1 -1  2  0  0  0-0.75   5
+      TAU1  -2  0  0 .0  0.0446    -1  0  0 .25 0.0426R1   0 -1  0 .50 0.0284
+      TAU1   0  1  0 .50 0.2170     0  2  0 .50 0.0142
+      BET1    1  0 -2  1  0  0 -.75   1
+      BET1   0 -1  0 .00 0.2266
+      NO1     1  0  0  1  0  0-0.75   9
+      NO1   -2 -2  0 .50 0.0057    -2 -1  0 .0  0.0665    -2  0  0 .0  0.3596
+      NO1   -1 -1  0 .75 0.0331R1  -1  0  0 .25 0.2227R1  -1  1  0 .75 0.0290R1
+      NO1    0 -1  0 .50 0.0290     0  1  0 .0  0.2004     0  2  0 .50 0.0054
+      CHI1    1  0  2 -1  0  0-0.75   2
+      CHI1   0 -1  0 .50 0.0282     0  1  0 .0  0.2187
+      PI1     1  1 -3  0  0  1-0.25   1
+      PI1    0 -1  0 .50 0.0078
+      P1      1  1 -2  0  0  0-0.25   6
+      P1     0 -2  0 .0  0.0008     0 -1  0 .50 0.0112     0  0  2 .50 0.0004
+      P1     1  0  0 .75 0.0004R1   2  0  0 .50 0.0015     2  1  0 .50 0.0003
+      S1      1  1 -1  0  0  1-0.75   2
+      S1     0  0 -2 .0  0.3534     0  1  0 .50 0.0264
+      K1      1  1  0  0  0  0-0.75  10
+      K1    -2 -1  0 .0  0.0002    -1 -1  0 .75 0.0001R1  -1  0  0 .25 0.0007R1
+      K1    -1  1  0 .75 0.0001R1   0 -2  0 .0  0.0001     0 -1  0 .50 0.0198
+      K1     0  1  0 .0  0.1356     0  2  0 .50 0.0029     1  0  0 .25 0.0002R1
+      K1     1  1  0 .25 0.0001R1
+      PSI1    1  1  1  0  0 -1-0.75   1
+      PSI1   0  1  0 .0  0.0190
+      PHI1    1  1  2  0  0  0-0.75   5
+      PHI1  -2  0  0 .0  0.0344    -2  1  0 .0  0.0106     0  0 -2 .0  0.0132
+      PHI1   0  1  0 .50 0.0384     0  2  0 .50 0.0185
+      THE1    1  2 -2  1  0  0 -.75   4
+      THE1  -2 -1  0 .00  .0300    -1  0  0 .25 0.0141R1   0 -1  0 .50  .0317
+      THE1   0  1  0 .00  .1993
+      J1      1  2  0 -1  0  0-0.75  10
+      J1     0 -1  0 .50 0.0294     0  1  0 .0  0.1980     0  2  0 .50 0.0047
+      J1     1 -1  0 .75 0.0027R1   1  0  0 .25 0.0816R1   1  1  0 .25 0.0331R1
+      J1     1  2  0 .25 0.0027R1   2  0  0 .50 0.0152     2  1  0 .50 0.0098
+      J1     2  2  0 .50 0.0057
+      OO1     1  3  0  0  0  0-0.75   8
+      OO1   -2 -1  0 .50 0.0037    -2  0  0 .0  0.1496    -2  1  0 .0  0.0296
+      OO1   -1  0  0 .25 0.0240R1  -1  1  0 .25 0.0099R1   0  1  0 .0  0.6398
+      OO1    0  2  0 .0  0.1342     0  3  0 .0  0.0086
+      UPS1    1  4  0 -1  0  0 -.75   5
+      UPS1  -2  0  0 .00 0.0611     0  1  0 .00 0.6399     0  2  0 .00 0.1318
+      UPS1   1  0  0 .25 0.0289R1   1  1  0 .25 0.0257R1
+      OQ2     2 -3  0  3  0  0 0.0    2
+      OQ2   -1  0  0 .25 0.1042R2   0 -1  0 .50 0.0386
+      EPS2    2 -3  2  1  0  0 0.0    3
+      EPS2  -1 -1  0 .25 0.0075R2  -1  0  0 .25 0.0402R2   0 -1  0 .50 0.0373
+      2N2     2 -2  0  2  0  0 0.0    4
+      2N2   -2 -2  0 .50 0.0061    -1 -1  0 .25 0.0117R2  -1  0  0 .25 0.0678R2
+      2N2    0 -1  0 .50 0.0374
+      MU2     2 -2  2  0  0  0 0.0    3
+      MU2   -1 -1  0 .25 0.0018R2  -1  0  0 .25 0.0104R2   0 -1  0 .50 0.0375
+      N2      2 -1  0  1  0  0 0.0    4
+      N2    -2 -2  0 .50 0.0039    -1  0  1 .00 0.0008     0 -2  0 .00 0.0005
+      N2     0 -1  0 .50 0.0373
+      NU2     2 -1  2 -1  0  0 0.0    4
+      NU2    0 -1  0 .50 0.0373     1  0  0 .75 0.0042R2   2  0  0 .0  0.0042
+      NU2    2  1  0 .50 0.0036
+      GAM2    2  0 -2  2  0  0 -.50   3
+      GAM2  -2 -2  0 .00 0.1429    -1  0  0 .25 0.0293R2   0 -1  0 .50 0.0330
+      H1      2  0 -1  0  0  1-0.50   2
+      H1     0 -1  0 .50 0.0224     1  0 -1 .50 0.0447
+      M2      2  0  0  0  0  0 0.0    9
+      M2    -1 -1  0 .75 0.0001R2  -1  0  0 .75 0.0004R2   0 -2  0 .0  0.0005
+      M2     0 -1  0 .50 0.0373     1 -1  0 .25 0.0001R2   1  0  0 .75 0.0009R2
+      M2     1  1  0 .75 0.0002R2   2  0  0 .0  0.0006     2  1  0 .0  0.0002
+      H2      2  0  1  0  0 -1 0.0    1
+      H2     0 -1  0 .50 0.0217
+      LDA2    2  1 -2  1  0  0-0.50   1
+      LDA2   0 -1  0 .50 0.0448
+      L2      2  1  0 -1  0  0-0.50   5
+      L2     0 -1  0 .50 0.0366     2 -1  0 .00 0.0047     2  0  0 .50 0.2505
+      L2     2  1  0 .50 0.1102     2  2  0 .50 0.0156
+      T2      2  2 -3  0  0  1 0.0    0
+      S2      2  2 -2  0  0  0 0.0    3
+      S2     0 -1  0 .0  0.0022     1  0  0 .75 0.0001R2   2  0  0 .0  0.0001
+      R2      2  2 -1  0  0 -1-0.50   2
+      R2     0  0  2 .50 0.2535     0  1  2 .0  0.0141
+      K2      2  2  0  0  0  0 0.0    5
+      K2    -1  0  0 .75 0.0024R2  -1  1  0 .75 0.0004R2   0 -1  0 .50 0.0128
+      K2     0  1  0 .0  0.2980     0  2  0 .0  0.0324
+      ETA2    2  3  0 -1  0  0 0.0    7
+      ETA2   0 -1  0 .50 0.0187     0  1  0 .0  0.4355     0  2  0 .0  0.0467
+      ETA2   1  0  0 .75 0.0747R2   1  1  0 .75 0.0482R2   1  2  0 .75 0.0093R2
+      ETA2   2  0  0 .50 0.0078
+      M3      3  0  0  0  0  0 -.50   1
+      M3     0 -1  0 .50  .0564
+ 
+      2PO1 2   2.0 P1        -1.0 O1
+      SO1  2   1.0 S2        -1.0 O1
+      ST36 3   2.0 M2         1.0 N2        -2.0 S2
+      2NS2 2   2.0 N2        -1.0 S2
+      ST37 2   3.0 M2        -2.0 S2
+      ST1  3   2.0 N2         1.0 K2        -2.0 S2
+      ST2  4   1.0 M2         1.0 N2         1.0 K2        -2.0 S2
+      ST3  3   2.0 M2         1.0 S2        -2.0 K2
+      O2   1   2.0 O1
+      ST4  3   2.0 K2         1.0 N2        -2.0 S2
+      SNK2 3   1.0 S2         1.0 N2        -1.0 K2
+      OP2  2   1.0 O1         1.0 P1
+      MKS2 3   1.0 M2         1.0 K2        -1.0 S2
+      ST5  3   1.0 M2         2.0 K2        -2.0 S2
+      ST6  4   2.0 S2         1.0 N2        -1.0 M2        -1.0 K2
+      2SK2 2   2.0 S2        -1.0 K2
+      MSN2 3   1.0 M2         1.0 S2        -1.0 N2
+      ST7  4   2.0 K2         1.0 M2        -1.0 S2        -1.0 N2
+      2SM2 2   2.0 S2        -1.0 M2
+      ST38 3   2.0 M2         1.0 S2        -2.0 N2
+      SKM2 3   1.0 S2         1.0 K2        -1.0 M2
+      2SN2 2   2.0 S2        -1.0 N2
+      NO3  2   1.0 N2         1.0 O1
+      MO3  2   1.0 M2         1.0 O1
+      NK3  2   1.0 N2         1.0 K1
+      SO3  2   1.0 S2         1.0 O1
+      MK3  2   1.0 M2         1.0 K1
+      SP3  2   1.0 S2         1.0 P1
+      SK3  2   1.0 S2         1.0 K1
+      ST8  3   2.0 M2         1.0 N2        -1.0 S2
+      N4   1   2.0 N2
+      3MS4 2   3.0 M2        -1.0 S2
+      ST39 4   1.0 M2         1.0 S2         1.0 N2        -1.0 K2
+      MN4  2   1.0 M2         1.0 N2
+      ST40 3   2.0 M2         1.0 S2        -1.0 K2
+      ST9  4   1.0 M2         1.0 N2         1.0 K2        -1.0 S2
+      M4   1   2.0 M2
+      ST10 3   2.0 M2         1.0 K2        -1.0 S2
+      SN4  2   1.0 S2         1.0 N2
+      KN4  2   1.0 K2         1.0 N2
+      MS4  2   1.0 M2         1.0 S2
+      MK4  2   1.0 M2         1.0 K2
+      SL4  2   1.0 S2         1.0 L2
+      S4   1   2.0 S2
+      SK4  2   1.0 S2         1.0 K2
+      MNO5 3   1.0 M2         1.0 N2         1.0 O1
+      2MO5 2   2.0 M2         1.0 O1
+      3MP5 2   3.0 M2        -1.0 P1
+      MNK5 3   1.0 M2         1.0 N2         1.0 K1
+      2MP5 2   2.0 M2         1.0 P1
+      2MK5 2   2.0 M2         1.0 K1
+      MSK5 3   1.0 M2         1.0 S2         1.0 K1
+      3KM5 3   1.0 K2         1.0 K1         1.0 M2
+      2SK5 2   2.0 S2         1.0 K1
+      ST11 3   3.0 N2         1.0 K2        -1.0 S2
+      2NM6 2   2.0 N2         1.0 M2
+      ST12 4   2.0 N2         1.0 M2         1.0 K2        -1.0 S2
+      ST41 3   3.0 M2         1.0 S2        -1.0 K2
+      2MN6 2   2.0 M2         1.0 N2
+      ST13 4   2.0 M2         1.0 N2         1.0 K2        -1.0 S2
+      M6   1   3.0 M2
+      MSN6 3   1.0 M2         1.0 S2         1.0 N2
+      MKN6 3   1.0 M2         1.0 K2         1.0 N2
+      2MS6 2   2.0 M2         1.0 S2
+      2MK6 2   2.0 M2         1.0 K2
+      NSK6 3   1.0 N2         1.0 S2         1.0 K2
+      2SM6 2   2.0 S2         1.0 M2
+      MSK6 3   1.0 M2         1.0 S2         1.0 K2
+      ST42 3   2.0 M2         2.0 S2        -1.0 K2
+      S6   1   3.0 S2
+      ST14 3   2.0 M2         1.0 N2         1.0 O1
+      ST15 3   2.0 N2         1.0 M2         1.0 K1
+      M7   1   3.5 M2
+      ST16 3   2.0 M2         1.0 S2         1.0 O1
+      3MK7 2   3.0 M2         1.0 K1
+      ST17 4   1.0 M2         1.0 S2         1.0 K2         1.0 O1
+      ST18 2   2.0 M2         2.0 N2
+      3MN8 2   3.0 M2         1.0 N2
+      ST19 4   3.0 M2         1.0 N2         1.0 K2        -1.0 S2
+      M8   1   4.0 M2
+      ST20 3   2.0 M2         1.0 S2         1.0 N2
+      ST21 3   2.0 M2         1.0 N2         1.0 K2
+      3MS8 2   3.0 M2         1.0 S2
+      3MK8 2   3.0 M2         1.0 K2
+      ST22 4   1.0 M2         1.0 S2         1.0 N2         1.0 K2
+      ST23 2   2.0 M2         2.0 S2
+      ST24 3   2.0 M2         1.0 S2         1.0 K2
+      ST25 3   2.0 M2         2.0 N2         1.0 K1
+      ST26 3   3.0 M2         1.0 N2         1.0 K1
+      4MK9 2   4.0 M2         1.0 K1
+      ST27 3   3.0 M2         1.0 S2         1.0 K1
+      ST28 2   4.0 M2         1.0 N2
+      M10  1   5.0 M2
+      ST29 3   3.0 M2         1.0 N2         1.0 S2
+      ST30 2   4.0 M2         1.0 S2
+      ST31 4   2.0 M2         1.0 N2         1.0 S2         1.0 K2
+      ST32 2   3.0 M2         2.0 S2
+      ST33 3   4.0 M2         1.0 S2         1.0 K1
+      M12  1   6.0 M2
+      ST34 2   5.0 M2         1.0 S2
+      ST35 4   3.0 M2         1.0 N2         1.0 K2         1.0 S2
+ 
+ 
